# demo

./: .gitignore  README.md
blackjack/src/: main.rs
cpp/conditional-assignment/: main.cpp
cpp/gdb-mem/: Object.h  main.cpp
cpp/l-and-r-values/: CMakeLists.txt  main.cpp
cpp/memoize/: main.cpp
cpp/references/: referenceToCollectionOfEncapsulatedStackItems.cpp
cpp/shared_ptr/: main.cpp
cpp/sockets/: README.md  client  client.cpp  server  server.cpp
cpp/string-ptr-compare/: main.cpp
cpp/switch/: main.cpp
ffi-playground/: build.sh  main.cpp
ffi-playground/cthing/: main.c  thing.c
ffi-playground/dynlib/: Cargo.toml
ffi-playground/statlib/: Cargo.toml
gol/: README.md
gol/src/: board.rs  main.rs
maze/src/: main.rs  maze.rs
problems/binary-tree/: binary-tree.h  helpers.h  io.h  main.cpp  stack.h
problems/catbox/: catbox.py
problems/longest-palindrome/: main.cpp
problems/longest-substring/: CMakeLists.txt  main.cpp
python/: Node.py  bfs.py  hurdles.txt  mergesort.py  myenum.py
rust/async-connected-mailbox/: Cargo.toml
rust/hello-ffi/: Cargo.toml  README.md
rust/hello-ffi-static/: .gitignore  Cargo.toml  README.md  build.rs
rust/simpleDB/: Cargo.toml
rust/term-draw/: Cargo.toml
www/: simple.json
www/fetch-ipv4-as-ipv6/: index.html
www/form-submit-post/: index.html
www/js/: index.html  index.js
www/multipart-set-cookie/: index.php
www/navigate-via-window-onload/: index.html
www/on-click-set-and-get-cookie/: index.html
www/page-with-iframe/: index.html  secondary.html
www/php-double-request/: index.php
(+34 files in other folders)
